@@ -1,4 +1,8 @@
 
+    Added xml::exception class, derived from std::runtime_error. Xmlwrapp
+    will throw only this or derived exception, with the exception of
+    std::bad_alloc(), which is still thrown when appropriate.
+
     Fixed compilation with Sun Studio compiler.
 
 Version 0.6.2
